--- a/src/components/login/Login.css
+++ b/src/components/login/Login.css
@@ -1,6 +1,6 @@
-/* SignUp.css */
+/* SignIn.css */
 
-.sign-up-container {
+.sign-in-container {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -8,7 +8,7 @@
     background-color: #f4f4f4;
   }
   
-  .sign-up-box {
+  .sign-in-box {
     background-color: #ffffff;
     padding: 30px;
     border-radius: 8px;
@@ -18,7 +18,7 @@
     text-align: center;
   }
   
-  .sign-up-box h2 {
+  .sign-in-box h2 {
     color: #35424a;
     margin-bottom: 20px;
     font-size: 28px;
@@ -49,7 +49,7 @@
     outline: none;
   }
   
-  .btn-sign-up {
+  .btn-sign-in {
     background-color: #e8491d;
     color: #ffffff;
     border: none;
@@ -60,7 +60,7 @@
     width: 100%;
   }
   
-  .btn-sign-up:hover {
+  .btn-sign-in:hover {
     background-color: #d73d17;
   }
   
@@ -74,7 +74,7 @@
   
   /* Responsive styling */
   @media (max-width: 768px) {
-    .sign-up-box {
+    .sign-in-box {
       padding: 20px;
       width: 90%;
     }
