--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -1,5 +1,6 @@
 /* Footer Container */
 .footer {
+  font-family: "Libre Franklin", sans-serif;
   background-color: #fff;
   color: #333;
   padding: 20px 0;
@@ -7,7 +8,7 @@
 
 /* Footer Logo */
 .footer-logo {
-  max-height: 100px;
+  max-height: 50px; /* Reduce the max-height for a smaller logo */
 }
 
 /* Social Links */
