--- a/src/components/homepage/Homepage.css
+++ b/src/components/homepage/Homepage.css
@@ -6,7 +6,7 @@
 }
 
 body {
-    font-family: Arial, sans-serif;
+    font-family: "Libre Franklin", sans-serif;
     background-color: #f4f4f4;
     line-height: 1.6;
     color: #414141;
