--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -1,8 +1,8 @@
 /* Footer Container */
 .footer {
   font-family: "Libre Franklin", sans-serif;
-  background-color: #fff;
-  color: #333;
+  background-color: #0a0a0a;
+  color: #fff;
   padding: 20px 0;
 }
 
