--- a/src/components/posts/Posts.css
+++ b/src/components/posts/Posts.css
@@ -1,14 +1,11 @@
 
 .how-it-works-container {
-  background-color: #ffffff;
   padding: 20px;
   border-radius: 8px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  color: #333;
+  box-shadow: inset 0 0 10px rgba(255, 255, 255, 0.3);
 }
 
 .how-it-works-container h1 {
-  color: #35424a;
   text-align: center;
   margin-bottom: 30px;
   font-size: 32px;
@@ -51,12 +48,7 @@
   order: 1; /* Image comes after text when on the right */
 }
 
-.step-image:hover {
-  transform: scale(1.05);
-}
-
 .step h2 {
-  color: #e8491d;
   font-size: 24px;
   margin-bottom: 10px;
   text-transform: uppercase;
@@ -65,7 +57,6 @@
 .step p {
   font-size: 16px;
   line-height: 1.6;
-  color: #555;
   text-align: justify;
 }
 
