--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,18 @@ body{
     background-color: #0a0a0a;
     color: #fff;
 }
+input:focus {
+    color: #fff !important; /* Change to your desired color */
+}
+textarea:focus {
+    color: #fff !important; /* Change to your desired color */
+}
+select:focus {
+    color: #fff !important; /* Change to your desired color */
+}
+textarea{
+    color: #fff !important; /* Change to your desired color */
+}
+select{
+    color: #fff !important; /* Change to your desired color */
+}
